# agent-zero

./: .gitignore  README.md
.github/workflows/: cpp-build.yml  node-bindings.yml  release.yml
cpp/: CI_CD_DOCUMENTATION.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  build.sh
cpp/bindings/node/: agent_zero_node.cpp  binding.gyp  index.js  package.json
cpp/bindings/python/: CMakeLists.txt  agent_zero_bindings.cpp
cpp/docs/: ARCHITECTURE.md
cpp/examples/: CMakeLists.txt  basic_usage.cpp  multi_paradigm.cpp  task_executor_example.cpp
cpp/include/agent_zero/: agent_core.hpp  memory_manager.hpp  multi_lang_bridge.hpp  task_executor.hpp  tool_interface.hpp
cpp/src/: agent_core.cpp  memory_manager.cpp  multi_lang_bridge.cpp  task_executor.cpp  tool_interface.cpp
cpp/tests/: CMakeLists.txt  test_agent_core.cpp  test_memory_manager.cpp  test_task_executor.cpp
python/helpers/: api.py  extension.py  files.py  rate_limiter.py  tool.py
tests/: test_rate_limiter.py
